src/test/ui/entry-point/imported_main_from_extern_crate.stderr
error: entry symbol `main` from foreign crate is not yet supported.
  --> $DIR/imported_main_from_extern_crate.rs:7:9
   |
LL | pub use main_functions::boilerplate as main;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #28937 <https://github.com/rust-lang/rust/issues/28937> for more information

error: aborting due to previous error

